[gd_scene load_steps=5 format=3 uid="uid://di4q12vyggwbe"]

[ext_resource type="Script" path="res://Scripts/ActivationButton.gd" id="1_jhors"]

[sub_resource type="Animation" id="Animation_h4008"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_6ci1x"]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.515, 0.515)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vp8y6"]
_data = {
"RESET": SubResource("Animation_h4008"),
"hover": SubResource("Animation_6ci1x")
}

[node name="Button" type="TextureButton" node_paths=PackedStringArray("anim_player")]
offset_left = -178.0
offset_top = -384.0
offset_right = 686.0
offset_bottom = 992.0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_jhors")
anim_player = NodePath("AnimationPlayer")
isGoal = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_vp8y6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
